# ChangeLog for dev-java/velocity-tools
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  11 Aug 2008; Jesse Farinacci <jieryn@gmail.com>
  +files/velocity-tools-1.4_bypass-download-jars.patch, +metadata.xml,
  +velocity-tools-1.4.ebuild:
  version bump, lots of ebuild-lovin as well

  07 Jun 2007; kiorky <kiorky@cryptelium.net> velocity-tools-1.1-r1.ebuild:
  fix to compile and install correctly. Fix typos and increase use of eclasses.

  06 Jun 2007; Miroslav Šulc <fordfrog@gentoo.org>
  velocity-tools-1.1-r1.ebuild:
  Dropped 'jikes' USE flag
